--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Hello</title>
-  </head>
-  <body>
-    <h1>Hello</h1>
-    <script src="build/bundle.js" charset="utf-8"></script>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Notes</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/3.3.2/masonry.pkgd.min.js"></script>
+</head>
+<body>
+    <div id='mount-point'></div>
+
+    <script type="text/javascript" src="build/bundle.js"></script>
+</body>
 </html>
